--- a/aula02.ipynb
+++ b/aula02.ipynb
@@ -272,11 +272,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "1FSncoAsGkH9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'notas' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m notas[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m8\u001b[39m  \u001b[39m#atribuindo um novo valor a um item da lista\u001b[39;00m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'notas' is not defined"
+          ]
+        }
+      ],
       "source": [
         "notas[0] = 8  #atribuindo um novo valor a um item da lista"
       ]
@@ -965,11 +977,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "UUN1_P9q_q35"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'notas' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mmin\u001b[39m(notas)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'notas' is not defined"
+          ]
+        }
+      ],
       "source": [
         "min(notas)"
       ]
@@ -2537,7 +2561,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
