--- a/aula03.ipynb
+++ b/aula03.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "zO4Lg589W79T"
       },
@@ -853,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 3,
       "metadata": {
         "id": "POwVgRUzjBRv"
       },
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 4,
       "metadata": {
         "id": "zyaAg1UqjRCz"
       },
@@ -888,18 +888,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mustang\n"
-          ]
-        },
-        {
-          "ename": "KeyError",
-          "evalue": "'ano'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[34], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mprint\u001b[39m(meu_carro[\u001b[39m\"\u001b[39m\u001b[39mmodelo\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(meu_carro[\u001b[39m\"\u001b[39;49m\u001b[39mano\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-            "\u001b[1;31mKeyError\u001b[0m: 'ano'"
+            "Mustang\n",
+            "1964\n"
           ]
         }
       ],
@@ -988,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 5,
       "metadata": {
         "id": "43hK9EYwrUIy"
       },
@@ -1000,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 6,
       "metadata": {
         "id": "3jXroUQdph7Z"
       },
@@ -1377,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 10,
       "metadata": {
         "id": "5xE_yyMpuv9V"
       },
@@ -1389,7 +1379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 8,
       "metadata": {
         "id": "sEeMDjQ911K4"
       },
@@ -1403,7 +1393,7 @@
               " '911': ['Porsche', 1964, 'branco']}"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1414,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 11,
       "metadata": {
         "id": "sdlKilsL1wOu"
       },
@@ -1429,7 +1419,7 @@
               " 'Ferrari': ['Ferrari', 1962, 'vermelho']}"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1697,7 +1687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "I02XdU31RFgb"
       },
@@ -2201,11 +2191,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pvM6WTMjxb4n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+          ]
+        }
+      ],
       "source": [
         "A = {0, 1, 3, 5, 7, 9}\n",
         "B = {0, 2, 4, 6, 8}\n",
@@ -2248,11 +2246,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "vLc33GQGTCsg"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'países_Sede' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m conj_intersecao \u001b[39m=\u001b[39m países_Sede\u001b[39m.\u001b[39mintersection(brasil_Copas)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'países_Sede' is not defined"
+          ]
+        }
+      ],
       "source": [
         "conj_intersecao = países_Sede.intersection(brasil_Copas)"
       ]
@@ -2786,7 +2796,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
     },
@@ -2800,7 +2810,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
