--- a/aula06.exercicos.ipynb
+++ b/aula06.exercicos.ipynb
@@ -338,13 +338,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "0e40f863",
       "metadata": {
         "cellView": "form",
         "id": "0e40f863"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# @title Resolução 13\n",
         "s = 'Python'\n",
@@ -543,6 +554,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "7614456e",
       "metadata": {
         "id": "7614456e"
       },
@@ -550,15 +562,15 @@
         "### Exercício 21\n",
         "\n",
         "Dados a = 5 e b = 10, retorne o seguinte texto: \"Resultado esperado: 5 + 10 = 15\""
-      ],
-      "id": "7614456e"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b984e019",
       "metadata": {
-        "id": "b984e019",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "b984e019"
       },
       "outputs": [],
       "source": [
@@ -567,11 +579,11 @@
         "b=10\n",
         "c= a + b\n",
         "\"Resultado esperado: {} + {} = {}\".format(a,b,c)"
-      ],
-      "id": "b984e019"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "a4ad8ea6",
       "metadata": {
         "id": "a4ad8ea6"
       },
@@ -579,26 +591,26 @@
         "### Exercício 22\n",
         "\n",
         "Utilize a formatação com f-strings para inserir uma variável float com duas casas decimais. Exemplo: `pi = 3.14159`, Resultado esperado: 'O valor de pi é 3.14'"
-      ],
-      "id": "a4ad8ea6"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "ca188981",
       "metadata": {
-        "id": "ca188981",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "ca188981"
       },
       "outputs": [],
       "source": [
         "# @title Resolução 22\n",
         "pi = 3.141559\n",
         "\"O valor de pi é {:.2f}\".format(pi)"
-      ],
-      "id": "ca188981"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "41d9f41c",
       "metadata": {
         "id": "41d9f41c"
       },
@@ -606,11 +618,14 @@
         "### Exercício 23\n",
         "\n",
         "Alinhe uma string à esquerda, à direita e ao centro usando os seguintes caracteres de preenchiment: 'l', 'r' e 'c', respectivamente, e um tamanho de 20 caracteres no total"
-      ],
-      "id": "41d9f41c"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "LpQbyGT0iwPq",
+      "metadata": {
+        "id": "LpQbyGT0iwPq"
+      },
       "source": [
         "Você pode alinhar uma string à esquerda, à direita e ao centro usando o método `ljust`, `rjust`, e `center`, respectivamente, em Python. Esses métodos permitem que você especifique tanto o comprimento total da string resultante quanto o caractere de preenchimento.\n",
         "\n",
@@ -618,18 +633,15 @@
         "- `ljust`: Alinha a string à esquerda e preenche o lado direito com espaços (ou outro caractere de preenchimento).\n",
         "- `rjust`: Alinha a string à direita e preenche o lado esquerdo com espaços (ou outro caractere de preenchimento).\n",
         "- `center`: Centraliza a string e preenche ambos os lados com espaços (ou outro caractere de preenchimento)."
-      ],
-      "metadata": {
-        "id": "LpQbyGT0iwPq"
-      },
-      "id": "LpQbyGT0iwPq"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b814ba87",
       "metadata": {
-        "id": "b814ba87",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "b814ba87"
       },
       "outputs": [],
       "source": [
@@ -647,11 +659,11 @@
         "print(right_aligned)\n",
         "print(center_aligned)\n",
         "\n"
-      ],
-      "id": "b814ba87"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "9b6de214",
       "metadata": {
         "id": "9b6de214"
       },
@@ -659,24 +671,30 @@
         "### Exercício 24\n",
         "\n",
         "Formate uma data usando a formatação de string. Exemplo: `dia = 15`, `mes = 8`, `ano = 2023`, Resultado esperado: '15/08/2023'"
-      ],
-      "id": "9b6de214"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "fhabARnJjAZI",
+      "metadata": {
+        "id": "fhabARnJjAZI"
+      },
       "source": [
         "Você pode formatar uma data usando a formatação de string em Python de várias maneiras. Uma das abordagens mais comuns é utilizando o método `format`. Vamos considerar a data com o dia = 15, mês = 8 e ano = 2023.\n",
         "\n",
         "1. Você pode definir a string de formatação, que inclui marcadores de posição para o dia, mês e ano, usando `{}`.\n",
         "2. Use o método `format` para preencher os marcadores de posição com os valores do dia, mês e ano.\n"
-      ],
-      "metadata": {
-        "id": "fhabARnJjAZI"
-      },
-      "id": "fhabARnJjAZI"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "jqaOQfLXjOLa",
+      "metadata": {
+        "cellView": "form",
+        "id": "jqaOQfLXjOLa"
+      },
+      "outputs": [],
       "source": [
         "# @title Resolução 24\n",
         "dia = 15\n",
@@ -685,17 +703,11 @@
         "\n",
         "data_formatada = \"{:02d}/{:02d}/{}\".format(dia, mes, ano)\n",
         "data_formatada"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "jqaOQfLXjOLa"
-      },
-      "id": "jqaOQfLXjOLa",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "dabceba3",
       "metadata": {
         "id": "dabceba3"
       },
@@ -703,15 +715,15 @@
         "### Exercício 5\n",
         "\n",
         "Utilize a formatação de string para representar um número em formato de moeda. Exemplo: `preco = 1500.5`, Resultado esperado: 'R$ 1,500.50'"
-      ],
-      "id": "dabceba3"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "529b7723",
       "metadata": {
-        "id": "529b7723",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "529b7723"
       },
       "outputs": [],
       "source": [
@@ -724,30 +736,38 @@
         "preco_formatado\n",
         "\n",
         "preco_formatado.replace(' ', '').replace(',',' ').replace('.',',').replace(' ','.')"
-      ],
-      "id": "529b7723"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "f3deV3CCwoAV",
       "metadata": {
         "id": "f3deV3CCwoAV"
       },
-      "id": "f3deV3CCwoAV",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": []
     },
-    "language_info": {
-      "name": "python"
-    },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
